--- a/MosseTest/MosseTest.vcxproj
+++ b/MosseTest/MosseTest.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TestFromFile.h" />
+    <ClInclude Include="TestOneFrame.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="startup.cpp" />
@@ -163,6 +164,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TestFromFile.cpp" />
+    <ClCompile Include="TestOneFrame.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
