- tests now receive extension of read files as parameter - tests now receive index of the first image to process - added debug function (only GetResponse so far)

--- a/MosseTracker/MosseTracker.vcxproj.filters
+++ b/MosseTracker/MosseTracker.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="MosseTracker.cpp">
       <Filter>src\MosseTracker</Filter>
     </ClCompile>
+    <ClCompile Include="MosseTracker_Debug.cpp">
+      <Filter>src\MosseTracker</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
