--- a/MosseTracker/MosseTracker.vcxproj
+++ b/MosseTracker/MosseTracker.vcxproj
@@ -173,6 +173,7 @@
     </ClCompile>
     <ClCompile Include="Fft.cpp" />
     <ClCompile Include="MosseTracker.cpp" />
+    <ClCompile Include="MosseTracker_Debug.cpp" />
     <ClCompile Include="MosseTracker_Misc.cpp" />
     <ClCompile Include="Mosse_Export.cpp" />
     <ClCompile Include="stdafx.cpp">
