--- a/MosseSamples/MosseTest.vcxproj.filters
+++ b/MosseSamples/MosseTest.vcxproj.filters
@@ -4,28 +4,28 @@
     <Filter Include="src">
       <UniqueIdentifier>{466263d8-d538-45fd-a8a3-2fdff2c03b40}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\TestFromFile">
+    <Filter Include="src\Sample4Trackers">
+      <UniqueIdentifier>{e095de59-1d22-4292-af04-89f0bf8454d5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\SampleFromFile">
       <UniqueIdentifier>{9e50aab4-e8dc-4b2a-8b2c-e1ab38208e93}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\TestOneFrame">
+    <Filter Include="src\SampleOneFrame">
       <UniqueIdentifier>{f8eb5ef2-e112-4306-8a34-1e70ab325efb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Test4Trackers">
-      <UniqueIdentifier>{e095de59-1d22-4292-af04-89f0bf8454d5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="TestFromFile.h">
-      <Filter>src\TestFromFile</Filter>
+    <ClInclude Include="Sample4Trackers.h">
+      <Filter>src\Sample4Trackers</Filter>
     </ClInclude>
-    <ClInclude Include="TestOneFrame.h">
-      <Filter>src\TestOneFrame</Filter>
+    <ClInclude Include="SampleFromFile.h">
+      <Filter>src\SampleFromFile</Filter>
     </ClInclude>
-    <ClInclude Include="Test4Trackers.h">
-      <Filter>src\Test4Trackers</Filter>
+    <ClInclude Include="SampleOneFrame.h">
+      <Filter>src\SampleOneFrame</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -35,14 +35,14 @@
     <ClCompile Include="startup.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="TestFromFile.cpp">
-      <Filter>src\TestFromFile</Filter>
+    <ClCompile Include="Sample4Trackers.cpp">
+      <Filter>src\Sample4Trackers</Filter>
     </ClCompile>
-    <ClCompile Include="TestOneFrame.cpp">
-      <Filter>src\TestOneFrame</Filter>
+    <ClCompile Include="SampleFromFile.cpp">
+      <Filter>src\SampleFromFile</Filter>
     </ClCompile>
-    <ClCompile Include="Test4Trackers.cpp">
-      <Filter>src\Test4Trackers</Filter>
+    <ClCompile Include="SampleOneFrame.cpp">
+      <Filter>src\SampleOneFrame</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
